--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,11 +14,11 @@ html {
 	font-family: Arial, Helvetica, sans-serif;
 }
 body {
-	background: var(--primary);
+	background: var(--secondary);
 
 	& *:not(h1, h2, h3, h4, h5) {
 		font-size: 1.6rem;
-		color: var(--secondary);
+		color: var(--primary);
 	}
 }
 
